# crawly

./: .gitignore  config.py  entry.py  locustfile.py  log_config.yaml  main.py  pyproject.toml  search_aggregator.py
search/: __init__.py  aggregator.py  config.py  engine.py
search/engines/: bing.py  google.py
search_engines/: __init__.py  bing.py  engine.py  google.py
