[tool.poetry]
name = "crawly"
version = "0.1.0"
description = ""
authors = ["vilinicz <v.ilinicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = {extras = ["http2"], version = "^0.28.0"}
pyyaml = "^6.0.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
beautifulsoup4 = "^4.12.3"
asgi-correlation-id = "^4.3.4"
locust = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
